syntax = "proto3";
option java_multiple_files = true;

package snailproject.proto;
option java_package = "vn.zalopay.migrator.ping";

import "google/api/annotations.proto";
import "common/error.proto";

enum Code {
  SUCCESS = 0;
  FAILED = 1;
  INCORRECT_PASSWORD = 2;
  UNAUTHORIZED = 3;
  NOT_ENOUGH_MONEY = 4;
  INTERNAL_SERVER_ERROR = 5;
}

message Error {
  // code = 0 means success
  Code code = 1;
  string message = 2;
  map<string, string> extra = 3;
}

message BalanceRequest { 
    message Data {
        int64 user_id = 1;
        string token = 2;
    }
 }

message BalanceResponse{
  message Data {
    int64 balance = 1;
  }

  Error error = 1;
  Data data = 2;
}

message HistoryRequest { 
    message Data {
        int64 user_id = 1;
        string token = 2;
    }
 }

message HistoryResponse{
  message Data {
    repeated Item items = 1;
  }

  Error error = 1;
  Data data = 2;
}

message Item {
    int64 history_id = 1;
    int64 user_transfer_id = 2;
    int64 amount = 3;
    string message = 4;
    int64 timestamp = 5;
    int64 balance = 6;
    enum TransferType {
        SEND = 0;
        RECEIVE = 1;
    }
    TransferType transfer_type = 7;
}

message TransferRequest { 
    message Data {
        int64 sender_id = 1;
        int64 receiver_id = 2;
        int64 amount = 3;
        string password = 4;
    }
 }

message TransferResponse{
  message Data {
    Item item = 1;
  }

  Error error = 1;
  Data data = 2;
}

message seenHistoryRequest{
    message Data{
        int64 history_id = 1;
    }
}

message seenHistoryResponse{
    Error error = 1;
}

service fintech{
  rpc getBalance(BalanceRequest) returns(BalanceResponse){
    
  }

  rpc getHitory(HistoryRequest) returns(HistoryResponse){
    
    }

    rpc transfer(TransferRequest) returns(TransferResponse){

    }

    rpc seenHistory(seenHistoryRequest) returns(seenHistoryResponse){

    }

}
